--- a/proizvod/eventpage/templates/eventpage/buy.html
+++ b/proizvod/eventpage/templates/eventpage/buy.html
@@ -43,7 +43,7 @@
                 <img src="/static/eventpage/img/EXAMPLE QR.png" alt="QR Code">
             </div>
             <div class="ticket-details">
-                <p><b>ID билета:</b> <br>{{ event.id }}</p>
+                <p><b>ID билета:</b> <br>{{ event.ticket_id }}</p>
             </div>
         </div>
         {% endif %}
