--- a/proizvod/eventpage/static/eventpage/css/style.css
+++ b/proizvod/eventpage/static/eventpage/css/style.css
@@ -213,13 +213,13 @@ header {
 
 /* Основной контейнер */
 .container {
-  max-width: 1550px;
+  max-width: 1600px;
   width: 100%;
   padding: 40px;
   margin-top: 100px; /* Отступ для учета фиксированного хедера */
   display: flex;
-  justify-content: center;
-}
+  justify-content: left;
+  }
 
 /* Контент */
 .content {
@@ -231,35 +231,32 @@ header {
 
 /* Изображение мероприятия */
 .event-image {
-  flex: 0 0 40%;
-  max-width: 40%;
-  border-radius: 5px;
+  margin-top: 5%;
+  margin-right: 2%;
+  margin-left: 15%;
 }
 
 .event-image img {
-  width: 75%;
-  height: auto;
-  margin-left: 22%;
-  margin-bottom: 3%;
+  max-width: 422px;
+  max-height: 575px;
+  border-radius: 22px;
 }
 
 /* Детали мероприятия */
 .event-details {
-  flex: 0 0 55%;
-  max-width: 55%;
   font-family: 'Candara';
   src: url('/static/regandaut/font/Candara.ttf') format('truetype');
+  max-width: 120%;
 }
 
 .event-details h2 {
-  font-size: 64px;
-  margin-bottom: 5%;
-  font-family: 'Hagrid';
-  src: url('/static/regandaut/font/Hagrid-Regular-trial.ttf') format('truetype');
+  font-size: 65px;
+  margin-bottom: 4%;
+  font-family: 'Candara';
 }
 
 .description {
-  margin-bottom: 3%;
+  margin-bottom: 2%;
   line-height: 1.5;
   font-size: 20px;
 }
@@ -278,7 +275,7 @@ header {
   font-size: 24px;
 }
 
-.event=details .submitting button {
+.event-details .submitting button {
  position: absolute;
  top: 40%;
  right: 30%;
@@ -291,12 +288,12 @@ header {
     opacity: 0.9;
     color: white;
     border: 1px solid white;
-    padding: 10px 40px;
-    font-size: 35px;
+    padding: 12px 40px;
+    font-size: 42px;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
     font-family: 'Candara';
     src: url('/static/regandaut/font/Candara.ttf') format('truetype');
-    border-radius: 35px;
+    border-radius: 50px;
     cursor: pointer;
     transition: background 0.3s;
 }
@@ -441,7 +438,8 @@ header {
 
 #wind .buy-ticket {
  margin-top: 12%;
-}
+ font-size: 35px;
+ }
 
 #wind .buy-ticket.disabled {
     opacity: 0.5;
