--- a/proizvod/figuration/static/figuration/css/almaty.css
+++ b/proizvod/figuration/static/figuration/css/almaty.css
@@ -17,7 +17,7 @@
     font-family: 'Candara';
     color: white;
     background:
-        url('/static/regandaut/img/stars.PNG') no-repeat center center,
+        url('/static/figuration/img/starshere.PNG') no-repeat center center,
         linear-gradient(180deg, rgba(47, 52, 105, 0.9), rgba(134, 141, 212, 0.9));
     background-size: cover;
     display: flex;
@@ -325,12 +325,11 @@
     border: 1px solid white;
     overflow: hidden;
     margin-top: 105px;
+    margin-right: 15px;
 }
 
 
-.map-container img {
-    width: 100%;
-    height: 100%;
+.map-container iframe {
     object-fit: contain;
     display: block;
 }
@@ -357,56 +356,6 @@
     animation: pulse 1.3s ease-in-out infinite;
 }
 
-.pin span {
-    display: inline-block;
-    white-space: nowrap;
-    position: absolute;
-    left: 1.5em;
-    top: 50%;
-    transform: translateY(-50%);
-    background: #fff;
-    border-radius: 3em;
-    padding: 0.3em 0.6em;
-    font-size: 0.9em;
-    color: #000;
-}
-
-.Band {
-    top: 46%;
-    left: 78%;
-}
-
-.Band button{
-    background: none;
-    border: none;
-    padding: 0;
-    margin: 0;
-    cursor: pointer;
-  }
-
-.fest {
-    top: 65.5%;
-    left: 54%;
-}
-
-.fest button{
-    background: none;
-    border: none;
-    padding: 0;
-    margin: 0;
-    cursor: pointer;
-  }
-
-@keyframes pulse {
-    0% {
-        transform: translate(-50%, -50%) scale(1);
-        opacity: 1;
-    }
-    100% {
-        transform: translate(-50%, -50%) scale(1.5);
-        opacity: 0;
-    }
-}
 
 .city-list {
     flex: 1;
@@ -440,4 +389,9 @@
 .city-item:hover {
     background-color: rgba(134, 141, 212, 1);
     cursor: pointer;
+}
+
+.event-item a {
+    text-decoration: none;
+    color: white;
 }
