--- a/proizvod/figuration/static/figuration/css/astana.css
+++ b/proizvod/figuration/static/figuration/css/astana.css
@@ -17,7 +17,7 @@
     font-family: 'Candara';
     color: white;
     background:
-        url('/static/regandaut/img/stars.PNG') no-repeat center center,
+        url('/static/figuration/img/starshere.PNG') no-repeat center center,
         linear-gradient(180deg, rgba(47, 52, 105, 0.9), rgba(134, 141, 212, 0.9));
     background-size: cover;
     display: flex;
@@ -152,7 +152,7 @@
 }
 
 .profile button img {
-    width: 35px; /* Размер иконки */
+    width: 40px; /* Размер иконки */
     height: auto;
 }
 
@@ -250,6 +250,7 @@
     width: 100px;
     height: auto;
 }
+
 .back-button img,
 .location img,
 .profile button img,
@@ -325,87 +326,13 @@
     border: 1px solid white;
     overflow: hidden;
     margin-top: 105px;
+    margin-right: 15px;
 }
 
 
-.map-container img {
-    width: 100%;
-    height: 100%;
+.map-container iframe {
     object-fit: contain;
     display: block;
-}
-
-
-.pin {
-    background: rgba(134, 141, 212, 1);
-    position: absolute; /* Абсолютное позиционирование внутри карты */
-    height: 0.7em;
-    width: 0.7em;
-    border-radius: 50%;
-}
-
-.pin::before {
-    content: '';
-    background: rgba(134, 141, 212, 0.7);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 150%;
-    height: 150%;
-    border-radius: 50%;
-    animation: pulse 1.3s ease-in-out infinite;
-}
-
-.pin span {
-    display: inline-block;
-    white-space: nowrap;
-    position: absolute;
-    left: 1.5em;
-    top: 50%;
-    transform: translateY(-50%);
-    background: #fff;
-    border-radius: 3em;
-    padding: 0.3em 0.6em;
-    font-size: 0.9em;
-    color: #000;
-}
-
-.AITU {
-    top: 79%;
-    left: 76%;
-}
-
-.AITU button{
-    background: none;
-    border: none;
-    padding: 0;
-    margin: 0;
-    cursor: pointer;
-  }
-
-.AITUCommencementParty {
-    top: 33.5%;
-    left: 58.5%;
-}
-.AITUCommencementParty button{
-    background: none;
-    border: none;
-    padding: 0;
-    margin: 0;
-    cursor: pointer;
-  }
-
-
-@keyframes pulse {
-    0% {
-        transform: translate(-50%, -50%) scale(1);
-        opacity: 1;
-    }
-    100% {
-        transform: translate(-50%, -50%) scale(1.5);
-        opacity: 0;
-    }
 }
 
 .city-list {
@@ -440,4 +367,9 @@
 .city-item:hover {
     background-color: rgba(134, 141, 212, 1);
     cursor: pointer;
+}
+
+.event-item a {
+    text-decoration: none;
+    color: white;
 }
